Added most html elements and empty css classes

--- a/main.html
+++ b/main.html
@@ -4,8 +4,180 @@
         <meta charset="UTF-8">
         <title>Space Ripples Reveal Big Bang's Smoking Gun - The New York Times</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        
+        <header id="header-container">
+            <div>
+                <i class="fa fa-bars header-bars" aria-hidden="true"></i>
+                <i class="fa fa-search header-search" aria-hidden="true"></i>
+                <h4 id="header-section-title">Space & Cosmos</h4>
+            </div>
+            <div>
+                <h2 id="header-title">The New York Times</h2>
+            </div>
+            <div>
+                <button class="ny-button">SUBSCRIBE NOW</button>
+                <button class="ny-button">LOG IN</button>
+            </div>
+        </header>
+        <main id="main-container">
+            <div id="main-title-container">
+                <div id="main-title">
+                    <h1>Space Ripples Reveal Big Bang’s Smoking Gun</h1>
+                </div>
+                <hr>
+                <div class="toolbar">
+                    <a href="#"><i class="fa fa-facebook toolbar-icon" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-whatsapp toolbar-icon" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-twitter toolbar-icon" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-envelope toolbar-icon" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-share toolbar-icon" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-bookmark-o toolbar-blank-icon" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-comment-o toolbar-blank-icon" aria-hidden="true"></i></a>
+                </div>
+            </div>
+            <div id="main-image-container">
+                <img src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-superJumbo.jpg?quality=90&auto=webp"
+                alt="Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago">
+                <p id="main-img-description">Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.Credit...</p>
+                <p id="main-img-credit">Rick Friedman for The New York Times</p>
+            </div>
+            <section>
+                <aside>
+
+                </aside>
+                <div class="article-credit-container">
+                    <h6 class="article-author">By <a href="https://www.nytimes.com/by/dennis-overbye">Dennis Overbye</a></h6>
+                    <time class="article-time">March 17, 2014</time>
+                </div>
+                <article class="main-paragraph">
+                    <p>Paragraph</p>
+                </article>
+                <div>
+                    <h6 class="article-subscribe">Thanks for reading The Times<br>
+                    <a href="#">Subscribe to The Times.</a></h6>
+                </div>
+                <article class="main-paragraph">
+                    <p>Paragraph</p>
+                </article>
+                <article>
+                    <h2 class="article-section">The Theory of Inflation</h2>
+                    <p class="article-description">Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.</p>
+                    <div class="image-group-container">
+                        <div>
+                            <img src="" alt="" class="image-group-single">
+                            <p class="image-group-description"><span class="image-group-title"></span></p>
+                        </div>
+                        <div>
+                            <img src="" alt="" class="image-group-single">
+                            <p class="image-group-description"><span class="image-group-title"></span></p>
+                        </div>
+                        <div>
+                            <img src="" alt="" class="image-group-single">
+                            <p class="image-group-description"><span class="image-group-title"></span></p>
+                        </div>
+                        <div>
+                            <img src="" alt="" class="image-group-single">
+                            <p class="image-group-description"><span class="image-group-title"></span></p>
+                        </div>
+                    </div>
+                    <div class="image-group-container">
+                        <div>
+                            <img src="" alt="" class="image-group-single">
+                            <p class="image-group-description"><span class="image-group-title"></span></p>
+                        </div>
+                        <div>
+                            <img src="" alt="" class="image-group-single">
+                            <p class="image-group-description"><span class="image-group-title"></span></p>
+                        </div>
+                        <div>
+                            <img src="" alt="" class="image-group-single">
+                            <p class="image-group-description"><span class="image-group-title"></span></p>
+                        </div>
+                        <div>
+                            <img src="" alt="" class="image-group-single">
+                            <p class="image-group-description"><span class="image-group-title"></span></p>
+                        </div>
+                    </div>
+                    <div class="article-credits">
+                        <h6>By LARRY BUCHANAN and JONATHAN CORUM</h6>
+                    </div>
+                </article>
+                <article>
+                    <p>Paragraph</p>
+                    <div>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZlfIVEy_YOA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p class="article-description">Stanford Professor Andrei Linde celebrates physics breakthrough
+                            <span class="article-description">Video by StanfordUniversity</span>
+                        </p>
+                    </div>
+                    <p>Paragraph</p>
+                </article>
+                <article>
+                    <div class="article-image-container">
+                        <img src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos-2/18cosmos-2-jumbo.jpg?quality=90&auto=webp"
+                        alt="The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth.">
+                        <p class="article-description">
+                            The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth.
+                            <span class="article-credits">Steffen Richter/Associated Press</span>
+                        </p>
+                    </div>
+                    <p>Paragraph</p>
+                </article>
+                <article class="article-description">
+                    A version of this article appears in print on March 18, 2014, Section A, Page 1 of the New York edition with the headline: Space Ripples Reveal Big Bang’s Smoking Gun. 
+                    <a href="http://www.nytreprints.com/">Order Reprints</a>
+                     | <a href="https://www.nytimes.com/section/todayspaper">Today’s Paper</a>
+                      | <a href="https://www.nytimes.com/subscription?campaignId=48JQY">Subscribe</a>
+                </article>
+            </section>
+            <div id="comments-container">
+                <button class="ny-button">Read 615 Comments</button>
+                <div class="toolbar">
+                    <a href="#"><i class="fa fa-facebook toolbar-icon" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-whatsapp toolbar-icon" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-twitter toolbar-icon" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-envelope toolbar-icon" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-share toolbar-icon" aria-hidden="true"></i></a>
+                </div>
+            </div>
+        </main>
+        <div id="additional-container">
+            <div id="additional-features-container">
+                <div class="additional-more-in-container">
+                    <h5>More in Space and Astronomy</h5>
+                    <div class="additional-more-in-grid">
+
+                    </div>
+                </div>
+            </div>
+            <aside id="additional-aside-container">
+
+            </aside>
+        </div>
+        <footer id="footer-container">
+            <div class="back-to-homepage">
+                <a href="https://www.nytimes.com/">Go to Home Page</a>
+            </div>
+            <div id="footer-title">
+                <h1>The New York Times</h1>
+            </div>
+            <nav id="footer-nav">
+                
+            </nav>
+            <div id="footer-links">
+
+            </div>
+            <div id="footer-sub-bar">
+                <div id="footer-sub-ad">
+                    <h5><strong>Subscribe for $0.25 a week.</strong> Ends tomorrow.</h5>
+                </div>
+                <div id="footer-expand">
+                    <h5>Expand</h5>
+                    <i class="fa fa-arrow-up footer-arrow-up" aria-hidden="true"></i>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
