Added header styling

--- a/main.html
+++ b/main.html
@@ -8,16 +8,17 @@
     </head>
     <body>
         <header id="header-container">
-            <div>
-                <i class="fa fa-bars header-bars" aria-hidden="true"></i>
-                <i class="fa fa-search header-search" aria-hidden="true"></i>
+            <div id="header-nav-container">
+                <i class="fa fa-bars header-bars"></i>
+                <i class="fa fa-search header-search"></i>
                 <h4 id="header-section-title">Space & Cosmos</h4>
             </div>
-            <div>
-                <h2 id="header-title">The New York Times</h2>
+            <div id="header-title-container">
+                <img src="assets/nytlogo.PNG"
+                alt="new york times logo" id="header-title">
             </div>
-            <div>
-                <button class="ny-button">SUBSCRIBE NOW</button>
+            <div id="header-button-container">
+                <button class="ny-button" id="header-subscribe-button">SUBSCRIBE NOW</button>
                 <button class="ny-button">LOG IN</button>
             </div>
         </header>
