Added fixed footer

--- a/main.html
+++ b/main.html
@@ -9,17 +9,18 @@
     <body>
         <header id="header-container">
             <div id="header-nav-container">
-                <i class="fa fa-bars header-bars"></i>
-                <i class="fa fa-search header-search"></i>
-                <h4 id="header-section-title">Space & Cosmos</h4>
+                <a href="#"><i class="fa fa-bars header-bars"></i></a>
+                <a href="#"><i class="fa fa-search header-search"></i></a>
+                <a href="https://www.nytimes.com/section/science/space" target="_blank" id="header-section-title">
+                <h4>Space & Cosmos</h4></a>
             </div>
             <div id="header-title-container">
-                <img src="assets/nytlogo.PNG"
-                alt="new york times logo" id="header-title">
+                <a href="https://www.nytimes.com/" target="_blank"><img src="assets/nytlogo.PNG"
+                alt="new york times logo" id="header-title"></a>
             </div>
             <div id="header-button-container">
-                <button class="ny-button" id="header-subscribe-button">SUBSCRIBE NOW</button>
-                <button class="ny-button">LOG IN</button>
+                <button class="ny-button" id="header-subscribe-button"><a href="#">SUBSCRIBE NOW</a></button>
+                <button class="ny-button"><a href="#">LOG IN</a></button>
             </div>
         </header>
         <main id="main-container">
@@ -171,11 +172,12 @@
 
             </div>
             <div id="footer-sub-bar">
+                <div></div>
                 <div id="footer-sub-ad">
                     <h5><strong>Subscribe for $0.25 a week.</strong> Ends tomorrow.</h5>
                 </div>
-                <div id="footer-expand">
-                    <h5>Expand</h5>
+                <div id="footer-expand-container">
+                    <h5 id="footer-expand"><strong>EXPAND</strong></h5>
                     <i class="fa fa-arrow-up footer-arrow-up" aria-hidden="true"></i>
                 </div>
             </div>
