--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
                 <p id="main-img-description">Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.
                 <span id="main-img-credit">Rick Friedman for The New York Times</span></p>
             </div>
-            <section id="article-container">
+            <section class="article-container">
                 <aside>
 
                 </aside>
@@ -78,66 +78,53 @@
                     <p class="article-paragraph">The ripples manifested themselves as faint spiral patterns in a bath of microwave radiation that permeates space and preserves a picture of the universe when it was 380,000 years old and as hot as the surface of the sun.</p>
                     <p class="article-paragraph">Dr. Kovac and his collaborators, working in an experiment known as Bicep, for Background Imaging of Cosmic Extragalactic Polarization, reported their results in a scientific briefing at the Center for Astrophysics here on Monday and in a set of papers submitted to The Astrophysical Journal.</p>
                 </article>
-                <article class="article-image-group-container">
-                    <h2 class="article-section">The Theory of Inflation</h2>
-                    <p class="article-description">Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.</p>
-                    <div class="image-group-container">
-                        <div>
-                            <img src="" alt="" class="image-group-single">
-                            <p class="image-group-description"><span class="image-group-title"></span></p>
-                        </div>
-                        <div>
-                            <img src="" alt="" class="image-group-single">
-                            <p class="image-group-description"><span class="image-group-title"></span></p>
-                        </div>
-                        <div>
-                            <img src="" alt="" class="image-group-single">
-                            <p class="image-group-description"><span class="image-group-title"></span></p>
-                        </div>
-                        <div>
-                            <img src="" alt="" class="image-group-single">
-                            <p class="image-group-description"><span class="image-group-title"></span></p>
-                        </div>
-                    </div>
-                    <div class="image-group-container">
-                        <div>
-                            <img src="" alt="" class="image-group-single">
-                            <p class="image-group-description"><span class="image-group-title"></span></p>
-                        </div>
-                        <div>
-                            <img src="" alt="" class="image-group-single">
-                            <p class="image-group-description"><span class="image-group-title"></span></p>
-                        </div>
-                        <div>
-                            <img src="" alt="" class="image-group-single">
-                            <p class="image-group-description"><span class="image-group-title"></span></p>
-                        </div>
-                        <div>
-                            <img src="" alt="" class="image-group-single">
-                            <p class="image-group-description"><span class="image-group-title"></span></p>
-                        </div>
-                    </div>
+            </section>
+            <div id="article-image-group-container">
+                <article>
+                    <h2>The Theory of Inflation</h2>
+                    <p id="article-image-group-description">Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.</p>
                     <div class="article-credits">
                         <h6>By LARRY BUCHANAN and JONATHAN CORUM</h6>
                     </div>
                 </article>
+            </div>
+            <section class="article-container">
                 <article>
-                    <p>Paragraph</p>
+                    <p class="article-paragraph">Dr. Kovac said the chance that the results were a fluke was only one in 10 million.</p>
+                    <p class="article-paragraph">Dr. Guth, now 67, pronounced himself “bowled over,” saying he had not expected such a definite confirmation in his lifetime.</p>
+                    <p class="article-paragraph">“With nature, you have to be lucky,” he said. “Apparently we have been lucky.”</p>
+                    <p class="article-paragraph">The results are the closely guarded distillation of three years’ worth of observations and analysis. Eschewing email for fear of a leak, Dr. Kovac personally delivered drafts of his work to a select few, meeting with Dr. Guth, who is now a professor at Massachusetts Institute of Technology (as is his son, Larry, who was sleeping that night in 1979), in his office last week.</p>
+                    <p class="article-paragraph">“It was a very special moment, and one we took very seriously as scientists,” said Dr. Kovac, who chose his words as carefully as he tended his radio telescopes.</p>
+                    <p class="article-paragraph">Andrei Linde of Stanford, a prolific theorist who first described the most popular variant of inflation, known as chaotic inflation, in 1983, was about to go on vacation in the Caribbean last week when Chao-Lin Kuo, a Stanford colleague and a member of Dr. Kovac’s team, knocked on his door with a bottle of Champagne to tell him the news.</p>
                     <div>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZlfIVEy_YOA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZlfIVEy_YOA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen class="article-video"></iframe>
                         <p class="article-description">Stanford Professor Andrei Linde celebrates physics breakthrough
-                            <span class="article-description">Video by StanfordUniversity</span>
+                            <span>Video by StanfordUniversity</span>
                         </p>
                     </div>
-                    <p>Paragraph</p>
+                    <p class="article-paragraph">Confused, Dr. Linde called out to his wife, asking if she had ordered anything.</p>
+                    <p class="article-paragraph">“And then I told him that in the beginning we thought that this was a delivery but we did not think that we ordered anything, but I simply forgot that actually I did order it, 30 years ago,” Dr. Linde wrote in an email.</p>
+                    <p class="article-paragraph">Calling from Bonaire, the Dutch Caribbean island, Dr. Linde said he was still hyperventilating. “Having news like this is the best way of spoiling a vacation,” he said.</p>
+                    <p class="article-paragraph">By last weekend, as social media was buzzing with rumors that inflation had been seen and news spread, astrophysicists responded with a mixture of jubilation and caution.</p>
+                    <p class="article-paragraph">Max Tegmark, a cosmologist at M.I.T., wrote in an email, “I think that if this stays true, it will go down as one of the greatest discoveries in the history of science.”</p>
+                    <p class="article-paragraph">John E. Carlstrom of the University of Chicago, Dr. Kovac’s mentor and head of a competing project called the South Pole Telescope, pronounced himself deeply impressed. “I think the results are beautiful and very convincing,” he said.</p>
+                    <p class="article-paragraph">Paul J. Steinhardt of Princeton, author of a competitor to inflation that posits the clash of a pair of universes as the cause of genesis, said that if true, the Bicep result would eliminate his model, but he expressed reservations about inflation.</p>
+                    <p class="article-paragraph">Lawrence M. Krauss of Arizona State and others also emphasized the need for confirmation, noting that the new results exceeded earlier estimates based on temperature maps of the cosmic background by the European Space Agency’s Planck satellite and other assumptions about the universe.</p>
+                    <p class="article-paragraph">“So we will need to wait and see before we jump up and down,” Dr. Krauss said.</p>
+                    <p class="article-paragraph">Corroboration might not be long in coming. The Planck spacecraft will report its own findings this year. At least a dozen other teams are trying similar measurements from balloons, mountaintops and space.</p>
                 </article>
                 <article>
+                    <h2>Spirals in the Sky</h2>
+                    <p class="article-paragraph">Gravity waves are the latest and deepest secret yet pried out of the cosmic microwaves, which were discovered accidentally by Arno Penzias and Robert Wilson at Bell Labs 50 years ago. They won the Nobel Prize.</p>
+                    <p class="article-paragraph">Dr. Kovac has spent his career trying to read the secrets of these waves. He is one of four leaders of Bicep, which has operated a series of increasingly sensitive radio telescopes at the South Pole, where the thin, dry air creates ideal observing conditions. The others are Clement Pryke of the University of Minnesota, Jamie Bock of the California Institute of Technology and Dr. Kuo of Stanford.</p>
+                    <p class="article-paragraph">“The South Pole is the closest you can get to space and still be on the ground,” Dr. Kovac said. He has been there 23 times, he said, wintering over in 1994. “I’ve been hooked ever since,” he said.</p>
                     <div class="article-image-container">
                         <img src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos-2/18cosmos-2-jumbo.jpg?quality=90&auto=webp"
                         alt="The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth.">
                         <p class="article-description">
                             The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth.
-                            <span class="article-credits">Steffen Richter/Associated Press</span>
+                            <span>Steffen Richter/Associated Press</span>
                         </p>
                     </div>
                     <p>Paragraph</p>
