Added most needed things other than aside bar and footer nav

--- a/main.html
+++ b/main.html
@@ -83,6 +83,25 @@
                 <article>
                     <h2>The Theory of Inflation</h2>
                     <p id="article-image-group-description">Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.</p>
+                    <div class="article-image-group">
+                        <img src="assets/inflationone.png" alt="inflation explanation pictures">
+                        <div class="article-image-group-explanation">
+                            <p class="article-explanation-block"><span>THE UNIVERSE</span>  is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.</p]>
+                            <p class="article-explanation-block"><span>NOT ENOUGH TIME</span>  The universe is not old enough for light to have traveled the vast distance from one side of the universe to the other, and there has not been enough time for scattered patches of hot and cold to mix into an even temperature.</p>
+                            <p class="article-explanation-block"><span>DISTANT COFFEE</span>  At a smaller scale, imagine using a telescope to look a mile in one direction. You see a coffee cup, and from the amount of steam, you can estimate its temperature and how much it has cooled.</p>
+                            <p class="article-explanation-block"><span>COFFEE EVERYWHERE</span>  Now turn around and look a mile in the other direction. You see a similar coffee cup, at exactly the same temperature. Coincidence? Maybe. But if you see a similar cup in every direction, you might want to look for another explanation.</p>
+                        </div>
+                    </div>
+                    <div class="article-image-group">
+                        <img src="assets/inflationtwo.png" alt="inflation explanation pictures">
+                        <div class="article-image-group-explanation">
+                            <p class="article-explanation-block"><span>THE UNIVERSE</span>  is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.</p]>
+                            <p class="article-explanation-block"><span>NOT ENOUGH TIME</span>  The universe is not old enough for light to have traveled the vast distance from one side of the universe to the other, and there has not been enough time for scattered patches of hot and cold to mix into an even temperature.</p>
+                            <p class="article-explanation-block"><span>DISTANT COFFEE</span>  At a smaller scale, imagine using a telescope to look a mile in one direction. You see a coffee cup, and from the amount of steam, you can estimate its temperature and how much it has cooled.</p>
+                            <p class="article-explanation-block"><span>COFFEE EVERYWHERE</span>  Now turn around and look a mile in the other direction. You see a similar coffee cup, at exactly the same temperature. Coincidence? Maybe. But if you see a similar cup in every direction, you might want to look for another explanation.</p>
+                        </div>
+                    </div>
+                    <div class="small-hr"></div>
                     <div class="article-credits">
                         <h6>By LARRY BUCHANAN and JONATHAN CORUM</h6>
                     </div>
@@ -127,18 +146,38 @@
                             <span>Steffen Richter/Associated Press</span>
                         </p>
                     </div>
-                    <p>Paragraph</p>
+                    <p class="article-paragraph">In 2002, he was part of a team that discovered that the microwave radiation was polarized, meaning the light waves had a slight preference to vibrate in one direction rather than another.</p>
+                    <p class="article-paragraph">This was a step toward the ultimate goal of detecting the gravitational waves from inflation. Such waves, squeezing space in one direction and stretching it in another as they go by, would twist the direction of polarization of the microwaves, theorists said. As a result, maps of the polarization in the sky should have little arrows going in spirals.</p>
+                    <p class="article-paragraph">Detecting those spirals required measuring infinitesimally small differences in the temperature of the microwaves. The group’s telescope, Bicep2, is basically a giant superconducting thermometer.</p>
+                    <p class="article-paragraph">“We had no expectations what we would see,” Dr. Kovac said.</p>
+                    <p class="article-paragraph">The strength of the signal surprised the researchers, and they spent a year burning up time on a Harvard supercomputer, making sure they had things right and worrying that competitors might beat them to the breakthrough.</p>
                 </article>
-                <article class="article-description">
-                    A version of this article appears in print on March 18, 2014, Section A, Page 1 of the New York edition with the headline: Space Ripples Reveal Big Bang’s Smoking Gun. 
+                <article>
+                    <h2>A Special Time</h2>
+                    <p class="article-paragraph">The data traced the onset of inflation to a time that physicists like Dr. Guth, staying up late in his Palo Alto house 35 years ago, suspected was a special break point in the evolution of the universe.</p>
+                    <p class="article-paragraph">Physicists recognize four forces at work in the world today: gravity, electromagnetism, and strong and weak nuclear forces. But they have long suspected that those are simply different manifestations of a single unified force that ruled the universe in its earliest, hottest moments.</p>
+                    <p class="article-paragraph">As the universe cooled, according to this theory, there was a fall from grace, like some old folk mythology of gods or brothers falling out with each other. The laws of physics evolved, with one force after another splitting away.</p>
+                    <p class="article-paragraph">That was where Dr. Guth came in.</p>
+                    <p class="article-paragraph">Under some circumstances, a glass of water can stay liquid as the temperature falls below 32 degrees, until it is disturbed, at which point it will rapidly freeze, releasing latent heat.</p>
+                    <p class="article-paragraph">Similarly, the universe could “supercool” and stay in a unified state too long. In that case, space itself would become imbued with a mysterious latent energy.</p>
+                    <p class="article-paragraph">Inserted into Einstein’s equations, the latent energy would act as a kind of antigravity, and the universe would blow itself up. Since it was space itself supplying the repulsive force, the more space was created, the harder it pushed apart.</p>
+                    <p class="article-paragraph">What would become our observable universe mushroomed in size at least a trillion trillionfold — from a submicroscopic speck of primordial energy to the size of a grapefruit — in less than a cosmic eye-blink.</p>
+                    <p class="article-paragraph">Almost as quickly, this pulse would subside, relaxing into ordinary particles and radiation. All of normal cosmic history was still ahead, resulting in today’s observable universe, a patch of sky and stars billions of light-years across. “It’s often said that there is no such thing as a free lunch,” Dr. Guth likes to say, “but the universe might be the ultimate free lunch.”</p>
+                    <p class="article-paragraph">Make that free lunches. Most of the hundred or so models resulting from Dr. Guth’s original vision suggest that inflation, once started, is eternal. Even as our own universe settled down to a comfortable homey expansion, the rest of the cosmos will continue blowing up, spinning off other bubbles endlessly, a concept known as the multiverse.</p>
+                    <p class="article-paragraph">So the future of the cosmos is perhaps bright and fecund, but do not bother asking about going any deeper into the past.</p>
+                    <p class="article-paragraph">We might never know what happened before inflation, at the very beginning, because inflation erases everything that came before it. All the chaos and randomness of the primordial moment are swept away, forever out of our view.</p>
+                    <p class="article-paragraph">“If you trace your cosmic roots,” said Abraham Loeb, a Harvard-Smithsonian astronomer who was not part of the team, “you wind up at inflation.”</p>
+                </article>
+                <article class="article-footer-description">
+                    <p>A version of this article appears in print on March 18, 2014, Section A, Page 1 of the New York edition with the headline: Space Ripples Reveal Big Bang’s Smoking Gun. 
                     <a href="http://www.nytreprints.com/">Order Reprints</a>
                      | <a href="https://www.nytimes.com/section/todayspaper">Today’s Paper</a>
-                      | <a href="https://www.nytimes.com/subscription?campaignId=48JQY">Subscribe</a>
+                      | <a href="https://www.nytimes.com/subscription?campaignId=48JQY">Subscribe</a></p>
                 </article>
             </section>
             <div id="comments-container">
-                <button class="ny-button">Read 615 Comments</button>
-                <div class="toolbar">
+                <button class="ny-button comments-button"><a href="#">Read 615 Comments</a></button>
+                <div class="toolbar footer-toolbar">
                     <a href="#"><i class="fa fa-facebook toolbar-icon" aria-hidden="true"></i></a>
                     <a href="#"><i class="fa fa-whatsapp toolbar-icon" aria-hidden="true"></i></a>
                     <a href="#"><i class="fa fa-twitter toolbar-icon" aria-hidden="true"></i></a>
@@ -147,31 +186,36 @@
                 </div>
             </div>
         </main>
-        <div id="additional-container">
-            <div id="additional-features-container">
-                <div class="additional-more-in-container">
-                    <h5>More in Space and Astronomy</h5>
-                    <div class="additional-more-in-grid">
-
-                    </div>
+        <footer>
+            <div id="footer-container">
+                <div class="back-to-homepage">
+                    <a href="https://www.nytimes.com/">Go to Home Page</a>
                 </div>
-            </div>
-            <aside id="additional-aside-container">
-
-            </aside>
-        </div>
-        <footer id="footer-container">
-            <div class="back-to-homepage">
-                <a href="https://www.nytimes.com/">Go to Home Page</a>
-            </div>
-            <div id="footer-title">
-                <h1>The New York Times</h1>
-            </div>
-            <nav id="footer-nav">
-                
-            </nav>
-            <div id="footer-links">
-
+                <div>
+                    <a href="https://www.nytimes.com/" target="_blank"><img src="assets/nytlogo.PNG"
+                alt="new york times logo" id="footer-title"></a>
+                </div>
+                <nav id="footer-nav">
+                    
+                </nav>
+                <div id="footer-links">
+                    <ul>
+                        <li><a href="#">© 2021 The New York Times Company</a></li>
+                        <li><a href="#">NYTCo</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Accessibility</a></li>
+                        <li><a href="#">Work with us</a></li>
+                        <li><a href="#">Advertise</a></li>
+                        <li><a href="#">T Brand Studio</a></li>
+                        <li><a href="#">Your Ad Choices</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="#">Terms of Sale</a></li>
+                        <li><a href="#">Site Map</a></li>
+                        <li><a href="#">Help</a></li>
+                        <li><a href="#">Subscriptions</a></li>
+                    </ul>
+                </div>
             </div>
             <div id="footer-sub-bar">
                 <div></div>
